# Backend/src/routes/index.ts
@@ -82,10 +82,11 @@ const models: TsoaRoute.Models = {
             "id": {"dataType":"double","required":true},
             "player1_id": {"dataType":"double","required":true},
             "username2": {"dataType":"string","required":true},
-            "winner_id": {"dataType":"union","subSchemas":[{"dataType":"boolean"},{"dataType":"enum","enums":[null]}],"required":true},
+            "winner_id": {"dataType":"union","subSchemas":[{"dataType":"double"},{"dataType":"enum","enums":[null]}],"required":true},
             "is_public": {"dataType":"boolean","required":true},
             "created_at": {"dataType":"datetime","required":true},
-            "game_state": {"dataType":"string","required":true},
+            "game_state": {"dataType":"any","required":true},
+            "who_start": {"dataType":"boolean","required":true},
         },
         "additionalProperties": false,
     },
@@ -95,6 +96,7 @@ const models: TsoaRoute.Models = {
         "properties": {
             "username2": {"dataType":"string","required":true},
             "starter": {"dataType":"boolean","required":true},
+            "who_start": {"dataType":"boolean","required":true},
         },
         "additionalProperties": false,
     },
